# FSPSimulator

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: __init__.py
docs/: _config.yml  conf.py  fspsim.html  fspsim.rst  fspsim.utils.html  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/_build/doctrees/: fspsim.doctree  fspsim.utils.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  fspsim.html  index.html  py-modindex.html
docs/_build/latex/: FSPSim.aux  FSPSim.fdb_latexmk  FSPSim.fls  FSPSim.idx  FSPSim.ind  FSPSim.out  FSPSim.tex  FSPSim.toc  YourProjectName.aux  YourProjectName.fdb_latexmk  YourProjectName.fls  YourProjectName.idx  YourProjectName.ind  YourProjectName.out  YourProjectName.tex  YourProjectName.toc  fspsim.fdb_latexmk  fspsim.fls  fspsim.ilg  fspsim.tex
docs/_sources/: fspsim.rst.txt  fspsim.utils.rst.txt  index.rst.txt  modules.rst.txt
docs/source/: conf.py  index.rst
settings/: fspsim_env.yml
src/: BenchmarkResults.ipynb  IntegratorTest.py  MakeTLEsTest.py  MakeTLEsTest.py.save  PropagatorTest.py  Visualisation.ipynb  Visualisation_For_Paper.ipynb  api.py  app.py  benchmark.py  main.py  main_profiling.py
src/data/catalogue/: SATCAT_before_prop.pickle
src/data/policy/: charles.json  policy123.json  s.json  sdfgasdf.json  test.json
src/data/prediction_csv/: 04_04_23_fsp.csv  FSP_Predictions.csv  benchmark_data.csv  (+4 more)
src/fspsim/: BenchmarkResults.ipynb  Propagator.ipynb  Tester.ipynb  Visualisation.ipynb  api.py  benchmark.py  simulate.py
src/tests/: PropagatorTest.py  SpaceCatalogueTest.py  SpaceObjectTest.py  UpdateCatalogueTest.py  appTests.py  main_profiling.py
src/utils/: AtmosphericDensity.py  Conversions.py  LaunchModel.py  Propagators.py  SpaceCatalogue.py  SpaceObject.py  UpdateCatalogue.py  Visualisation.ipynb  atmospheric_density.py  coords.py  launch_model.py  propagator.py  visviva.py
(+184 files in other folders)
