[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "fspsim"
version = "0.0.6"
authors = [
  { name="Indigo Brownhall", email="indigo.brownhall.20@ucl.ac.uk" },
  { name="Charles Constant", email="chales.constant.18@ucl.ac.uk" },
]
description = "UCL-SGNL's Future Space Popualtion Simulator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ucl-sgnl/fspsimulator"
"Source Code" = "https://github.com/ucl-sgnl/fspsimulator"
"Bug Tracker" = "https://github.com/ucl-sgnl/fspsimulator/issues"