[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "fspsim"
version = "0.0.11"
authors = [
  { name="Indigo Brownhall", email="indigo.brownhall.20@ucl.ac.uk" },
  { name="Charles Constant", email="chales.constant.18@ucl.ac.uk" },
]
description = "UCL-SGNL's Future Space Popualtion Simulator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "jplephem >= 2.18, < 3.0",
    "requests >= 2.28, < 3.0",
    "wget >= 3.2, < 4.0",
    "python-dotenv >0.21.0",
    "xlsxwriter >= 3.0.9",
    "pandas >= 1.3",
    "matplotlib >= 3.4",
    "scipy >= 1.7",
    "pillow >= 8.3",
    "astropy >= 5.2.2",
    "poliastro >= 0.17.0",
    "tqdm >= 4.65.0",
    "sgp4 >= 2.21",
    "numba >= 0.53",
    "numpy >= 1.19",
    "joblb >= 1.3.1"
]

[project.urls]
"Homepage" = "https://github.com/ucl-sgnl/fspsimulator"
"Source Code" = "https://github.com/ucl-sgnl/fspsimulator"
"Bug Tracker" = "https://github.com/ucl-sgnl/fspsimulator/issues"
